# burn-python

./: .gitignore  Cargo.toml  README.md  pyproject.toml
burn_python/: __init__.py
src/: lib.rs  tensor.rs
src/interpreter/: context.rs  mod.rs
src/interpreter/ops/: activation.rs  elementwise.rs  linear.rs  mod.rs  reshape.rs
tests/: bench_bridge.py  compare_ort.py  make_test_model.py  mlp.onnx  mlp_ref_input.npy  mlp_ref_output.npy  test_bridge.py
