[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "burn-python"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["numpy>=1.20"]
description = "Python inference frontend for the Burn deep learning framework"
license = { text = "MIT OR Apache-2.0" }

[tool.maturin]
module-name = "burn_python._burn_python"
features = ["pyo3/extension-module"]
